# open-mwc

./: .gitignore  README.md  config.py  disco.py  loader.py  logs.py  miio.py  miot.py  mjac.py  mwc10.py  mwc11.py  mwc1x.py  pair.py  props.py  rtsp.py  udp.py
mihome/: MJA1-C06CW.pin  disco.py  logs.py  miio.py  miot.py  mjac.py  mwc10.py  mwc11.py  mwc1x.py  props.py  udp.py
mwc11mux/: .gitignore  Cargo.toml
mwc11mux/src/: arp.rs  lib.rs  main.rs
mwc11proxy/: Cargo.toml
mwc11proxy/src/: arp.rs  lib.rs  log.rs  main.rs  options.rs
obsolete/: disco.py  miss.py  mwc10.py
other/: cs2p2p.py
