[package]
name = "mwc11proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
bytes  = "1.2"
chrono = "0.4"
clap   = { version = "4.0", features = ["derive"] }
libc   = "0.2"
log    = { version = "0.4", features = ["std"] }
tokio  = { version = "1.21", features = ["full"] }
